scanner.c
/* Generated by re2c 0.14.3 on Sat Sep 23 15:29:37 2017 */
#line 1 "scanner.re"

#include <string.h>
#include "mk.h"
#include "scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int mk_get_token(mk_scanner_state *s, mk_scanner_token *token) {

	char *q = YYCURSOR, *start = YYCURSOR;
	int status = MK_SCANNER_RETCODE_IMPOSSIBLE;
	int is_constant = 0, j;

	while (MK_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
#line 23 "scanner.c"
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy71;
			case '\t':
			case '\r':
			case ' ':	goto yy67;
			case '\n':	goto yy69;
			case '!':	goto yy35;
			case '"':	goto yy17;
			case '$':	goto yy18;
			case '%':	goto yy55;
			case '&':	goto yy37;
			case '\'':	goto yy13;
			case '(':	goto yy21;
			case ')':	goto yy23;
			case '*':	goto yy51;
			case '+':	goto yy49;
			case ',':	goto yy63;
			case '-':	goto yy2;
			case '.':	goto yy57;
			case '/':	goto yy53;
			case '0':	goto yy4;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy6;
			case ':':	goto yy59;
			case ';':	goto yy61;
			case '<':	goto yy43;
			case '=':	goto yy47;
			case '>':	goto yy45;
			case '?':	goto yy65;
			case '@':	goto yy33;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy20;
			case 'F':
			case 'f':	goto yy9;
			case 'I':
			case 'i':	goto yy11;
			case 'N':
			case 'n':	goto yy7;
			case 'T':
			case 't':	goto yy10;
			case 'V':
			case 'v':	goto yy12;
			case '[':	goto yy29;
			case '\\':
			case '_':	goto yy19;
			case ']':	goto yy31;
			case '^':	goto yy41;
			case '{':	goto yy25;
			case '|':	goto yy39;
			case '}':	goto yy27;
			case '~':	goto yy15;
			default:	goto yy73;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '-':	goto yy171;
			case '0':	goto yy177;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy163;
			case '=':	goto yy175;
			case '>':	goto yy173;
			default:	goto yy3;
			}
yy3:
#line 336 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_SUB;
			return 0;
		}
#line 154 "scanner.c"
yy4:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'x':	goto yy168;
			default:	goto yy164;
			}
yy5:
#line 24 "scanner.re"
			{
			token->opcode = MK_T_INTEGER;
			token->value = strndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
#line 172 "scanner.c"
yy6:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy164;
yy7:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'U':
			case 'u':	goto yy158;
			default:	goto yy117;
			}
yy8:
#line 111 "scanner.re"
			{
			token->value = strndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			token->opcode = MK_T_IDENTIFIER;
			return 0;
		}
#line 194 "scanner.c"
yy9:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy153;
			default:	goto yy117;
			}
yy10:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy149;
			default:	goto yy117;
			}
yy11:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy140;
			default:	goto yy117;
			}
yy12:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy134;
			default:	goto yy117;
			}
yy13:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych >= 0x01) goto yy130;
yy14:
#line 426 "scanner.re"
			{
			status = MK_SCANNER_RETCODE_ERR;
			break;
		}
#line 233 "scanner.c"
yy15:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '"':	goto yy124;
			default:	goto yy16;
			}
yy16:
#line 168 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BITWISE_NOT;
			return 0;
		}
#line 248 "scanner.c"
yy17:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy14;
			goto yy119;
yy18:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy116;
			default:	goto yy14;
			}
yy19:
			yych = *++YYCURSOR;
			goto yy117;
yy20:
			yych = *++YYCURSOR;
			goto yy117;
yy21:
			++YYCURSOR;
#line 120 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_PARENTHESES_OPEN;
			return 0;
		}
#line 327 "scanner.c"
yy23:
			++YYCURSOR;
#line 126 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_PARENTHESES_CLOSE;
			return 0;
		}
#line 336 "scanner.c"
yy25:
			++YYCURSOR;
#line 132 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BRACKET_OPEN;
			return 0;
		}
#line 345 "scanner.c"
yy27:
			++YYCURSOR;
#line 138 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BRACKET_CLOSE;
			return 0;
		}
#line 354 "scanner.c"
yy29:
			++YYCURSOR;
#line 144 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_SBRACKET_OPEN;
			return 0;
		}
#line 363 "scanner.c"
yy31:
			++YYCURSOR;
#line 150 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_SBRACKET_CLOSE;
			return 0;
		}
#line 372 "scanner.c"
yy33:
			++YYCURSOR;
#line 156 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_AT;
			return 0;
		}
#line 381 "scanner.c"
yy35:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy112;
			default:	goto yy36;
			}
yy36:
#line 162 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_NOT;
			return 0;
		}
#line 395 "scanner.c"
yy37:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '&':	goto yy110;
			default:	goto yy38;
			}
yy38:
#line 186 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BITWISE_AND;
			return 0;
		}
#line 409 "scanner.c"
yy39:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '|':	goto yy108;
			default:	goto yy40;
			}
yy40:
#line 192 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BITWISE_OR;
			return 0;
		}
#line 423 "scanner.c"
yy41:
			++YYCURSOR;
#line 198 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_BITWISE_XOR;
			return 0;
		}
#line 432 "scanner.c"
yy43:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '<':	goto yy106;
			case '=':	goto yy104;
			default:	goto yy44;
			}
yy44:
#line 294 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_LESS;
			return 0;
		}
#line 447 "scanner.c"
yy45:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy100;
			case '>':	goto yy102;
			default:	goto yy46;
			}
yy46:
#line 300 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_GREATER;
			return 0;
		}
#line 462 "scanner.c"
yy47:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy96;
			case '>':	goto yy94;
			default:	goto yy48;
			}
yy48:
#line 216 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_ASSIGN;
			return 0;
		}
#line 477 "scanner.c"
yy49:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '+':	goto yy90;
			case '=':	goto yy92;
			default:	goto yy50;
			}
yy50:
#line 330 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_ADD;
			return 0;
		}
#line 492 "scanner.c"
yy51:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy88;
			default:	goto yy52;
			}
yy52:
#line 342 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_MUL;
			return 0;
		}
#line 506 "scanner.c"
yy53:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy86;
			default:	goto yy54;
			}
yy54:
#line 348 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_DIV;
			return 0;
		}
#line 520 "scanner.c"
yy55:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy84;
			default:	goto yy56;
			}
yy56:
#line 354 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_MOD;
			return 0;
		}
#line 534 "scanner.c"
yy57:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '.':	goto yy78;
			case '=':	goto yy80;
			default:	goto yy58;
			}
yy58:
#line 324 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_DOT;
			return 0;
		}
#line 549 "scanner.c"
yy59:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case ':':	goto yy76;
			default:	goto yy60;
			}
yy60:
#line 384 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_COLON;
			return 0;
		}
#line 563 "scanner.c"
yy61:
			++YYCURSOR;
#line 390 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_DOTCOMMA;
			return 0;
		}
#line 572 "scanner.c"
yy63:
			++YYCURSOR;
#line 396 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_COMMA;
			return 0;
		}
#line 581 "scanner.c"
yy65:
			++YYCURSOR;
#line 402 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_QUESTION;
			return 0;
		}
#line 590 "scanner.c"
yy67:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy75;
yy68:
#line 408 "scanner.re"
			{
			s->active_char += (YYCURSOR - start);
			token->opcode = MK_T_IGNORE;
			return 0;
		}
#line 602 "scanner.c"
yy69:
			++YYCURSOR;
#line 414 "scanner.re"
			{
			s->active_line++;
			s->active_char = 0;
			token->opcode = MK_T_IGNORE;
			return 0;
		}
#line 612 "scanner.c"
yy71:
			++YYCURSOR;
#line 421 "scanner.re"
			{
			status = MK_SCANNER_RETCODE_EOF;
			break;
		}
#line 620 "scanner.c"
yy73:
			yych = *++YYCURSOR;
			goto yy14;
yy74:
			++YYCURSOR;
			yych = *YYCURSOR;
yy75:
			switch (yych) {
			case '\t':
			case '\r':
			case ' ':	goto yy74;
			default:	goto yy68;
			}
yy76:
			++YYCURSOR;
#line 318 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_DOUBLECOLON;
			return 0;
		}
#line 642 "scanner.c"
yy78:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '.':	goto yy82;
			default:	goto yy79;
			}
yy79:
#line 372 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_INCLUSIVE_RANGE;
			return 0;
		}
#line 656 "scanner.c"
yy80:
			++YYCURSOR;
#line 252 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_CONCATASSIGN;
			return 0;
		}
#line 665 "scanner.c"
yy82:
			++YYCURSOR;
#line 378 "scanner.re"
			{
			s->active_char += 3;
			token->opcode = MK_T_EXCLUSIVE_RANGE;
			return 0;
		}
#line 674 "scanner.c"
yy84:
			++YYCURSOR;
#line 246 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_MODASSIGN;
			return 0;
		}
#line 683 "scanner.c"
yy86:
			++YYCURSOR;
#line 240 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_DIVASSIGN;
			return 0;
		}
#line 692 "scanner.c"
yy88:
			++YYCURSOR;
#line 234 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_MULASSIGN;
			return 0;
		}
#line 701 "scanner.c"
yy90:
			++YYCURSOR;
#line 360 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_INCR;
			return 0;
		}
#line 710 "scanner.c"
yy92:
			++YYCURSOR;
#line 222 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_ADDASSIGN;
			return 0;
		}
#line 719 "scanner.c"
yy94:
			++YYCURSOR;
#line 312 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_DOUBLEARROW;
			return 0;
		}
#line 728 "scanner.c"
yy96:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy98;
			default:	goto yy97;
			}
yy97:
#line 258 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_EQUALS;
			return 0;
		}
#line 742 "scanner.c"
yy98:
			++YYCURSOR;
#line 270 "scanner.re"
			{
			s->active_char += 3;
			token->opcode = MK_T_IDENTICAL;
			return 0;
		}
#line 751 "scanner.c"
yy100:
			++YYCURSOR;
#line 288 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_GREATEREQUAL;
			return 0;
		}
#line 760 "scanner.c"
yy102:
			++YYCURSOR;
#line 210 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_BITWISE_SHIFTRIGHT;
			return 0;
		}
#line 769 "scanner.c"
yy104:
			++YYCURSOR;
#line 282 "scanner.re"
			{
			s->active_char++;
			token->opcode = MK_T_LESSEQUAL;
			return 0;
		}
#line 778 "scanner.c"
yy106:
			++YYCURSOR;
#line 204 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_BITWISE_SHIFTLEFT;
			return 0;
		}
#line 787 "scanner.c"
yy108:
			++YYCURSOR;
#line 180 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_OR;
			return 0;
		}
#line 796 "scanner.c"
yy110:
			++YYCURSOR;
#line 174 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_AND;
			return 0;
		}
#line 805 "scanner.c"
yy112:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy114;
			default:	goto yy113;
			}
yy113:
#line 264 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = MK_T_NOTEQUALS;
			return 0;
		}
#line 819 "scanner.c"
yy114:
			++YYCURSOR;
#line 276 "scanner.re"
			{
			s->active_char += 3;
			token->opcode = MK_T_NOTIDENTICAL;
			return 0;
		}
#line 828 "scanner.c"
yy116:
			++YYCURSOR;
			yych = *YYCURSOR;
yy117:
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy116;
			default:	goto yy8;
			}
yy118:
			++YYCURSOR;
			yych = *YYCURSOR;
yy119:
			switch (yych) {
			case 0x00:	goto yy120;
			case '"':	goto yy122;
			case '\\':	goto yy121;
			default:	goto yy118;
			}
yy120:
			YYCURSOR = YYMARKER;
			switch (yyaccept) {
			case 0: 	goto yy5;
			case 1: 	goto yy14;
			default:	goto yy16;
			}
yy121:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':	goto yy120;
			default:	goto yy118;
			}
yy122:
			++YYCURSOR;
#line 100 "scanner.re"
			{
			token->opcode = MK_T_STRING;
			token->value = strndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
#line 935 "scanner.c"
yy124:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy120;
			case '"':	goto yy127;
			case '\\':	goto yy126;
			default:	goto yy124;
			}
yy126:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':	goto yy120;
			default:	goto yy124;
			}
yy127:
			++YYCURSOR;
#line 90 "scanner.re"
			{
			token->opcode = MK_T_ISTRING;
			token->value = strndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
#line 963 "scanner.c"
yy129:
			++YYCURSOR;
			yych = *YYCURSOR;
yy130:
			switch (yych) {
			case 0x00:	goto yy120;
			case '\'':	goto yy132;
			case '\\':	goto yy131;
			default:	goto yy129;
			}
yy131:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':	goto yy120;
			default:	goto yy129;
			}
yy132:
			++YYCURSOR;
#line 80 "scanner.re"
			{
			token->opcode = MK_T_CHAR;
			token->value = strndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
#line 992 "scanner.c"
yy134:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy135;
			default:	goto yy117;
			}
yy135:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'U':
			case 'u':	goto yy136;
			default:	goto yy117;
			}
yy136:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy137;
			default:	goto yy117;
			}
yy137:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'S':
			case 's':	goto yy138;
			default:	goto yy117;
			}
yy138:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy116;
			default:	goto yy139;
			}
yy139:
#line 73 "scanner.re"
			{
			s->active_char += sizeof("values")-1;
			token->opcode = MK_T_VALUES;
			return 0;
		}
#line 1097 "scanner.c"
yy140:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'S':
			case 's':	goto yy141;
			case 'T':
			case 't':	goto yy142;
			default:	goto yy117;
			}
yy141:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy145;
			default:	goto yy117;
			}
yy142:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy143;
			default:	goto yy117;
			}
yy143:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy116;
			default:	goto yy144;
			}
yy144:
#line 67 "scanner.re"
			{
			s->active_char += sizeof("into")-1;
			token->opcode = MK_T_INTO;
			return 0;
		}
#line 1197 "scanner.c"
yy145:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy146;
			default:	goto yy117;
			}
yy146:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':
